# plover-lapwing-aio

./: LICENSE  MANIFEST.in  README.md  setup.cfg
plover_lapwing/: system.py
plover_lapwing/dictionaries/: .gitrepo  README.md  abby-left-hand-modifiers.py  emily-modifiers.py  lapwing-base.json  lapwing-commands.json  lapwing-movement.modal  lapwing-prefixed-proper-nouns.json  lapwing-proper-nouns.json  lapwing-semi-modal-movement.json
