[metadata]
name = plover-lapwing-aio
version = 1.4.1
description = Plover plugin to install Lapwing dependencies and extras.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aerick
url = https://github.com/aerickt/plover-lapwing-aio
project_urls =
	Source Code = https://github.com/aerickt/plover-lapwing-aio/
	Issue Tracker = https://github.com/aerickt/plover-lapwing-aio/issues
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
	setuptools<77
install_requires =
	plover>=4.0.0.dev11
	plover-dict-commands
	plover-last-translation
	plover-modal-dictionary
	plover-python-dictionary
	plover-stitching
include_package_data = True
packages =
	plover_lapwing

[options.entry_points]
plover.system =
	Lapwing = plover_lapwing.system
